feat plan crud
